<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginTab">

    <!-- Progress bar -->
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:progressDrawable="@drawable/gradient_button"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Whole content in one vertical layout -->
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Header -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/header_background"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="144dp"
                android:layout_height="134dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/greetings"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/subHeaderText"
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/app_description"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <LinearLayout
            android:id="@+id/input_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/etSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/e_mail"
                android:autofillHints="emailAddress"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textEmailAddress" />



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/etSignInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:autofillHints="password"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPassword"
                />

                <ImageButton
                    android:id="@+id/btnTogglePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:padding="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_visibility_off"
                    android:contentDescription="@string/toggle_password_visibility" />
            </FrameLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />
        <LinearLayout
            android:id="@+id/action_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:paddingHorizontal="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/login"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="12dp"
                android:text="@string/no_account_yet"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnOpenSignUp"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/sign_up"
                android:textSize="18sp"
                />



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
