<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterTab">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/curve_header_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Create an Account"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:background="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/type_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <Button
            android:id="@+id/btnManufacturer"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="#4CAF50"
            android:drawableEnd="@drawable/check"
            android:fontFamily="@font/poppins_regular"
            android:text="Manufacturer" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnPersonal"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="#4CAF50"
            android:fontFamily="@font/poppins_regular"
            android:drawableEnd="@drawable/uncheck"
            android:text="Personal" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toBottomOf="@id/type_selection">

        <EditText
            android:id="@+id/etSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etSignUpFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:autofillHints="firstName"
            android:fontFamily="@font/poppins_regular"
            android:hint="First Name"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etSignUpLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:autofillHints="lastName"
            android:fontFamily="@font/poppins_regular"
            android:hint="Last Name"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <EditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:fontFamily="@font/poppins_regular"
                android:hint="Create password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingEnd="36dp"
                />

            <ImageButton
                android:id="@+id/btnTogglePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@android:color/transparent"
                android:contentDescription="@string/toggle_password_visibility"
                android:padding="8dp"
                android:src="@drawable/ic_visibility_off" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <EditText
                android:id="@+id/etSignUpConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:fontFamily="@font/poppins_regular"
                android:hint="Confirm password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingEnd="36dp"
                />

            <ImageButton
                android:id="@+id/btnToggleCfPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@android:color/transparent"
                android:contentDescription="@string/toggle_password_visibility"
                android:padding="8dp"
                android:src="@drawable/ic_visibility_off" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_form"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>