<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:background="@color/colorLightMode"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:id="@+id/gradientBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/glass"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layoutNotification"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="30dp"
                android:background="@drawable/rectangular_background"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="16dp"
                    android:layout_margin="8dp"
                    app:tint="@color/green"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/notification" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/alarms_and_notification"
                    android:textColor="@color/green"
                    android:textSize="11sp"
                    android:fontFamily="@font/quicksand_semibold"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="Welcome,"
                android:textColor="@color/green"
                android:textSize="25sp"
                android:fontFamily="@font/quicksand_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/imageMenu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintVertical_bias="0.15"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/green"
                android:textSize="25sp"
                android:text="User"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textHeader"
                app:layout_constraintVertical_bias="0" />

            <ImageView
                android:id="@+id/headerLogo"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_marginEnd="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/header_logo"
                app:layout_constraintTop_toBottomOf="@id/imageMenu"
                app:layout_constraintEnd_toEndOf="@id/textHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mainMenu" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mainMenu"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:background="@drawable/scrollview_background"
                    app:layout_constraintTop_toBottomOf="@id/userName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="32dp"
                        android:text="Setup"
                        android:fontFamily="@font/quicksand_bold"
                        android:textSize="20dp"
                        android:textColor="@color/green"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />
                    <Button
                        android:id="@+id/btnHomeSignOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign Out"
                        android:backgroundTint="@color/background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.812"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.837" />

                    <LinearLayout
                        android:id="@+id/layoutHealth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="112dp"
                        android:background="@drawable/rectangular_background"
                        android:backgroundTint="@color/colorHealth"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/app_name"
                            android:padding="8dp"
                            android:src="@drawable/health" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/health_preference"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:background="@drawable/rectangular_background"
                        android:backgroundTint="@color/colorBarcode"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/layoutHealth"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/layoutHealth"
                        app:layout_constraintVertical_bias="1">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/app_name"
                            android:padding="8dp"
                            android:src="@drawable/ic_edit" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Edit Profile"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
